test/cgip/PP/error/inheritance/rep/reperr-19.vdm
-- This file has been automatically updated wrt. VDM++ Lang.Adjust, 1th iteration
-- This file has been automatically updated wrt. VDM++ Lang.Adjust, 1th iteration


--  D - A - C
--    \
--      B 
class D

instance variables
    d : char := 'd';

end D



class C 


functions 
    f: () -> char
    f () ==
        'a'
end C

class A is subclass of D


operations 
  public Test : () ==> char  
  Test () ==
        return C`f(1)

end A














